#  * Cargo.toml
#  * Copyright (C) Mohammad (Sina) Jalalvandi (parsidate) 2024-2025 <jalalvandi.sina@gmail.com>
#  * Sign: parsidate-20250415-a7a78013d25e-f7c1ad27b18ba6d800f915500eda993f


[package]
name = "parsidate" 
version = "1.6.0"
edition = "2021"
description = "A comprehensive library for working with the Persian (Jalali/Shamsi) calendar system in Rust."
license = "Apache-2.0" 
authors = ["Sina Jalalvandi <Jalalvandi.Sina@gmail.com>"] 
homepage = "https://crates.io/crates/parsidate"
repository = "https://github.com/jalalvandi/ParsiDate"
readme = "README.md"
documentation = "https://docs.rs/parsidate/"
keywords = ["date", "jalali","calendar","persian","shamsi"]
categories = ["date-and-time", "localization","internationalization"]
rust-version = "1.70"

[lib]
name = "parsidate"
path = "src/lib.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "^0.4"
serde = { version = "^1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"  # Required for tests

[features]
default = ["serde"]
full = ["serde", "json"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
