#  * Cargo.toml
#  * Copyright (C) Mohammad (Sina) Jalalvandi (parsidate) 2024-2025 <jalalvandi.sina@gmail.com>
#  * Sign: parsidate-20250607-fea13e856dcd-459c6e73c83e49e10162ee28b26ac7cd


[package]
name = "parsidate" 
version = "1.7.0"
edition = "2021"
description = "A comprehensive library for working with the Persian (Jalali/Shamsi) calendar system in Rust."
license = "Apache-2.0" 
authors = ["Sina Jalalvandi <Jalalvandi.Sina@gmail.com>"] 
homepage = "https://crates.io/crates/parsidate"
repository = "https://github.com/parsicore/ParsiDate"
readme = "README.md"
documentation = "https://docs.rs/parsidate/"
keywords = ["date", "jalali", "calendar", "persian", "shamsi"] 
categories = ["date-and-time", "localization", "internationalization"]
rust-version = "1.70"

[lib]
name = "parsidate"
path = "src/lib.rs"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = "^0.4"
serde = { version = "^1.0", optional = true, features = ["derive"] }
chrono-tz = { version = "0.10", optional = true }

[dev-dependencies]
serde_json = "1.0"
chrono-tz = "0.10"

[features]
default = ["serde"]
serde = ["dep:serde"]
# json = ["serde", "dep:serde_json"]
timezone = ["dep:chrono-tz"]
full = ["serde", "timezone"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]